// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|PanelActionBar 3 items 1`] = `
<ul
  class="css-13c7bym-Container egs2kzf0"
>
  <li
    class="css-1tizi7s-ActionItem egs2kzf2"
  >
    <button
      class="css-1r3i0dl-ActionButton egs2kzf1"
    >
      Nr1
    </button>
  </li>
  <li
    class="css-1ed8z1i-ActionItem egs2kzf2"
  >
    <button
      class="css-1r3i0dl-ActionButton egs2kzf1"
    >
      Nr2
    </button>
  </li>
  <li
    class="css-1ed8z1i-ActionItem egs2kzf2"
  >
    <button
      class="css-1r3i0dl-ActionButton egs2kzf1"
    >
      Nr3
    </button>
  </li>
</ul>
`;

exports[`Storyshots Components|PanelActionBar single item 1`] = `
<ul
  class="css-13c7bym-Container egs2kzf0"
>
  <li
    class="css-1tizi7s-ActionItem egs2kzf2"
  >
    <button
      class="css-1r3i0dl-ActionButton egs2kzf1"
    >
      CLEAR
    </button>
  </li>
</ul>
`;
